extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8080
+github.client.id=2897d528cbee5819ae13
+github.client.secret=cfc3fe14bae74687019938e0e55b7efda5da07cf
+github.redirect.rui=http://localhost:8080/callback
