--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,22 @@
 server.port=8080
 github.client.id=2897d528cbee5819ae13
 github.client.secret=cfc3fe14bae74687019938e0e55b7efda5da07cf
-github.redirect.rui=http://localhost:8080/callback
+github.redirect.uri=http://localhost:8080/callback
+#ucloud.ufile.public-key=TOKEN_f465454a-f3ab-4c9b-91a5-c7babf59cc38
+#ucloud.ufile.private-key=18977163-f21e-4deb-a2e3-9bfa0b888ba5
+#ucloud.ufile.bucket-name=mawen
+#ucloud.ufile.region=cn-bj
+#ucloud.ufile.suffix=ufileos.com
+#ucloud.ufile.expires=315360000
+spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&amp;characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.type-aliases-package=life.majiang.community.mapper
+#mybatis.mapper-locations=classpath:mapper/*.xml
+#logging.file=logs/community.log
+#logging.level.root=info
+#logging.level.life.majiang.community.mapper=debug
+#logging.file.max-history=15
+#logging.file.max-size=100MB
